Enhance community card display by conditionally rendering member count
- Added conditional rendering for community member count in card.html to display only if members exist.
- Improved the layout for better visibility of community information.

--- a/site/_includes/card.html
+++ b/site/_includes/card.html
@@ -50,6 +50,7 @@
                 />
                 {{ community.location | escape }}
               </div>
+              {% if community.members %}
               <div class="list-inline-item text-dark">
                 <img
                   src="{{ site.url }}/assets/icons/users-group.svg"
@@ -60,6 +61,7 @@
                 />
                 {{ community.members }}
               </div>
+              {% endif %}
             </div>
             <div class="mt-3 list mb-0 text-secondary d-block d-sm-none">
               <div class="list-item text-dark">
