Add organizer guide and update site layout, closes #16
- Introduced a new 'Organizer guide' page with comprehensive tips on organizing tech meetups, covering topics such as audience targeting, co-organizers, event format, and promotion strategies.
- Updated the footer to include a link to the new organizer guide.
- Enhanced the layout of the main site to better structure content and improve readability.

--- a/site/_layouts/default.html
+++ b/site/_layouts/default.html
@@ -50,7 +50,11 @@
   <body class="theme-dark-auto">
     <div class="page">
       <div class="page-wrapper">
-        {% include header.html %} {{ content }} {% include footer.html %}
+        {% include header.html %}
+        <div class="page-body">
+          <div class="container">{{ content }}</div>
+        </div>
+        {% include footer.html %}
       </div>
     </div>
   </body>
