--- a/site/_includes/footer.html
+++ b/site/_includes/footer.html
@@ -21,6 +21,9 @@
           <li class="list-inline-item">
             <a href="https://github.com/olegp/techtribes">Source code</a>
           </li>
+          <li class="list-inline-item">
+            <a href="/guide">Organizer guide</a>
+          </li>
         </ul>
       </div>
     </div>
