--- a/site/_layouts/default.html
+++ b/site/_layouts/default.html
@@ -47,6 +47,7 @@
     <meta name="theme-color" content="#206bc4" />
 
     <link rel="canonical" href="{{ site.url }}{{ page.url }}" />
+    <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ site.url }}/feed.xml" />
 
     <script type="application/ld+json">
       {
