feat: add RSS feed link to footer, closes #34

--- a/site/_includes/footer.html
+++ b/site/_includes/footer.html
@@ -19,6 +19,9 @@
             Last updated on {{ site.time | date: '%d/%m/%Y' }}
           </li>
           <li class="list-inline-item">
+            <a href="/feed.xml">Feed</a>
+          </li>
+          <li class="list-inline-item">
             <a href="https://github.com/olegp/techtribes">Source code</a>
           </li>
           <li class="list-inline-item">
