refactor: update footer links and header icons for better navigation

--- a/site/_includes/footer.html
+++ b/site/_includes/footer.html
@@ -19,10 +19,10 @@
             Last updated on {{ site.time | date: '%d/%m/%Y' }}
           </li>
           <li class="list-inline-item">
-            <a href="/feed.xml">Feed</a>
+            <a href="https://github.com/olegp/techtribes">Code</a>
           </li>
           <li class="list-inline-item">
-            <a href="https://github.com/olegp/techtribes">Source code</a>
+            <a href="/feed.xml">Feed</a>
           </li>
           <li class="list-inline-item">
             <a href="/guide">Organizer guide</a>
