--- a/site/_includes/header.html
+++ b/site/_includes/header.html
@@ -17,13 +17,23 @@
         <div class="btn-list">
           <a href="https://github.com/olegp/techtribes" class="btn">
             <img
-              src="{{ site.url }}/assets/icons/github.svg"
+              src="{{ site.url }}/assets/icons/code.svg"
               width="20"
               height="20"
               class="icon"
-              alt="GitHub logo"
+              alt="Code icon"
             />
-            Source code
+            Code
+          </a>
+          <a href="{{ site.url }}/feed.xml" class="btn">
+            <img
+              src="{{ site.url }}/assets/icons/rss.svg"
+              width="20"
+              height="20"
+              class="icon"
+              alt="RSS icon"
+            />
+            Feed
           </a>
         </div>
       </div>
