fix: add mb-1 class to badge for spacing, closes #33

--- a/site/_includes/card.html
+++ b/site/_includes/card.html
@@ -90,7 +90,7 @@
             <div class="mt-3 badges">
               {% for tag in community.tags %}
               <div
-                class="badge badge-outline text-secondary fw-normal badge-pill text-dark"
+                class="badge badge-outline text-secondary fw-normal badge-pill text-dark mb-1"
               >
                 {{ tag }}
               </div>
