feat: add tooltip styling for email alert button

--- a/site/_includes/header.html
+++ b/site/_includes/header.html
@@ -25,7 +25,11 @@
             />
             Code
           </a>
-          <a href="{{ site.url }}/feed.xml" class="btn">
+          <a
+            href="{{ site.url }}/feed.xml"
+            class="btn"
+            data-tooltip="Use feedrabbit.com for email alerts"
+          >
             <img
               src="{{ site.url }}/assets/icons/rss.svg"
               width="20"
