--- a/site/_layouts/default.html
+++ b/site/_layouts/default.html
@@ -47,7 +47,12 @@
     <meta name="theme-color" content="#206bc4" />
 
     <link rel="canonical" href="{{ site.url }}{{ page.url }}" />
-    <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ site.url }}/feed.xml" />
+    <link
+      rel="alternate"
+      type="application/rss+xml"
+      title="{{ site.title | escape }}"
+      href="{{ site.url }}/feed.xml"
+    />
 
     <script type="application/ld+json">
       {
@@ -97,7 +102,7 @@
         z-index: 1000;
       }
       [data-tooltip]::after {
-        content: '';
+        content: "";
         position: absolute;
         top: 50%;
         right: 100%;
@@ -147,5 +152,6 @@
         {% include footer.html %}
       </div>
     </div>
+    {% include analytics.html %}
   </body>
 </html>
