--- a/site/_includes/card.html
+++ b/site/_includes/card.html
@@ -1,101 +1,72 @@
 <div class="card mb-1">
-  <div class="row g-0">
-    <div class="col-auto">
-      <div class="card-body">
-        <a href="{{ community.site | default: community.events }}">
-          <img
-            src="{% assign protocol = community.logo | slice: 0, 4 %}{% if protocol == 'http' %}{{ community.logo }}{% else %}{{ site.url }}/assets/logos/{{ community.logo }}{% endif %}"
-            width="64"
-            height="64"
-            class="avatar logo"
-            alt="{{ community.name }} logo"
-            loading="lazy"
-          />
-        </a>
-      </div>
+  <div class="flex gap-0">
+    <div class="shrink-0 p-4">
+      <a href="{{ community.site | default: community.events }}">
+        <img
+          src="{% assign protocol = community.logo | slice: 0, 4 %}{% if protocol == 'http' %}{{ community.logo }}{% else %}{{ site.url }}/assets/logos/{{ community.logo }}{% endif %}"
+          width="64"
+          height="64"
+          class="size-16 shrink-0 object-cover rounded-full"
+          alt="{{ community.name }} logo"
+          loading="lazy"
+        />
+      </a>
     </div>
-    <div class="col">
-      <div class="card-body ps-0">
-        <div class="row">
-          <div class="col">
-            <h3 class="mb-0">
-              <a href="{{ community.site | default: community.events }}"
-                >{{ community.name | escape }}</a
-              >
-            </h3>
-          </div>
-          <div class="col-auto fs-3 text-muted">
-            <img
-              src="{{ site.url }}/assets/icons/calendar-event.svg"
-              width="20"
-              height="20"
-              class="icon icon-inline"
-              alt="Calendar event"
-            />
-            <a href="{{ community.event }}">{{ community.date }}</a>
+    <div class="flex-1 p-4 pl-0">
+      <div class="flex items-start justify-between">
+        <div class="flex-1">
+          <h3 class="mb-0 text-lg font-semibold">
+            <a href="{{ community.site | default: community.events }}"
+              >{{ community.name | escape }}</a
+            >
+          </h3>
+        </div>
+        <div class="text-lg text-muted-foreground flex items-center gap-1">
+          <img
+            src="{{ site.url }}/assets/icons/calendar-event.svg"
+            width="20"
+            height="20"
+            class="w-5 h-5 inline-block"
+            alt="Calendar event"
+          />
+          <a href="{{ community.event }}" class="text-primary hover:underline">{{ community.date }}</a>
+        </div>
+      </div>
+      <div class="flex flex-col md:flex-row md:items-center md:justify-between gap-3">
+        <div class="flex-1">
+          <div class="mt-3 flex flex-wrap gap-x-1 mb-0 text-muted-foreground">
+            <div class="flex items-center gap-1">
+              <img
+                src="{{ site.url }}/assets/icons/map-pin.svg"
+                width="20"
+                height="20"
+                class="w-5 h-5 inline-block"
+                alt="Map pin"
+              />
+              {% if community.eventLocation %}{{ community.eventLocation | escape }}{% else %}{{ community.location | escape }}{% endif %}
+            </div>
+            {% if community.members %}
+            <div class="flex items-center gap-1">
+              <span class="mx-1">·</span>
+              <img
+                src="{{ site.url }}/assets/icons/users-group.svg"
+                width="20"
+                height="20"
+                class="w-5 h-5 inline-block"
+                alt="Users group"
+              />
+              {{ community.members }}
+            </div>
+            {% endif %}
           </div>
         </div>
-        <div class="row">
-          <div class="col-md">
-            <div
-              class="mt-3 list-inline list-inline-dots mb-0 text-secondary d-sm-block d-none"
-            >
-              <div class="list-inline-item text-dark">
-                <img
-                  src="{{ site.url }}/assets/icons/map-pin.svg"
-                  width="20"
-                  height="20"
-                  class="icon icon-inline"
-                  alt="Map pin"
-                />
-                {% if community.eventLocation %}{{ community.eventLocation | escape }}{% else %}{{ community.location | escape }}{% endif %}
-              </div>
-              {% if community.members %}
-              <div class="list-inline-item text-dark">
-                <img
-                  src="{{ site.url }}/assets/icons/users-group.svg"
-                  width="20"
-                  height="20"
-                  class="icon icon-inline"
-                  alt="Users group"
-                />
-                {{ community.members }}
-              </div>
-              {% endif %}
-            </div>
-            <div class="mt-3 list mb-0 text-secondary d-block d-sm-none">
-              <div class="list-item text-dark">
-                <img
-                  src="{{ site.url }}/assets/icons/map-pin.svg"
-                  width="20"
-                  height="20"
-                  class="icon icon-inline"
-                  alt="Map pin"
-                />
-                {% if community.eventLocation %}{{ community.eventLocation | escape }}{% else %}{{ community.location | escape }}{% endif %}
-              </div>
-              <div class="list-item text-dark">
-                <img
-                  src="{{ site.url }}/assets/icons/users-group.svg"
-                  width="20"
-                  height="20"
-                  class="icon icon-inline"
-                  alt="Users group"
-                />
-                {{ community.members }}
-              </div>
-            </div>
-          </div>
-          <div class="col-md-auto">
-            <div class="mt-3 badges">
-              {% for tag in community.tags %}
-              <div
-                class="badge badge-outline text-secondary fw-normal badge-pill text-dark mb-1"
-              >
-                {{ tag }}
-              </div>
-              {% endfor %}
-            </div>
+        <div class="w-full md:w-auto">
+          <div class="mt-3 flex flex-wrap gap-1">
+            {% for tag in community.tags %}
+            <span class="badge mb-1">
+              {{ tag }}
+            </span>
+            {% endfor %}
           </div>
         </div>
       </div>
