refactor: improve footer layout and structure

--- a/site/_includes/footer.html
+++ b/site/_includes/footer.html
@@ -2,19 +2,7 @@
   <div class="container mx-auto px-4 py-6">
     <div class="flex flex-col lg:flex-row items-center justify-between gap-3 lg:gap-0 text-center">
       <div class="w-full lg:w-auto">
-        <ul class="flex flex-wrap gap-x-4 mb-0">
-          <li>
-            Host a community on
-            <a href="https://www.meetabit.com/communities/new">Meetabit</a>
-          </li>
-          <li>
-            · Sponsored by
-            <a href="https://www.toughbyte.com/about">Toughbyte</a>
-          </li>
-        </ul>
-      </div>
-      <div class="w-full lg:w-auto lg:ml-auto">
-        <ul class="flex flex-wrap gap-x-4 mb-0">
+        <ul class="flex flex-wrap items-center gap-x-4 mb-0">
           <li>
             Last updated on {{ site.time | date: '%d/%m/%Y' }}
           </li>
@@ -29,6 +17,18 @@
           <li>
             ·
             <a href="/guide">Organizer guide</a>
+          </li>
+        </ul>
+      </div>
+      <div class="w-full lg:w-auto lg:ml-auto">
+        <ul class="flex flex-wrap items-center gap-x-4 mb-0">
+          <li>
+            Host a community on
+            <a href="https://www.meetabit.com/communities/new">Meetabit</a>
+          </li>
+          <li>
+            · Sponsored by
+            <a href="https://www.toughbyte.com/about">Toughbyte</a>
           </li>
         </ul>
       </div>
