--- a/site/_layouts/default.html
+++ b/site/_layouts/default.html
@@ -103,6 +103,7 @@
       </main>
       {% include footer.html %}
     </div>
+    <script src="{{ site.url }}/assets/js/tooltip.js"></script>
     {% include analytics.html %}
   </body>
 </html>
