--- a/site/_includes/footer.html
+++ b/site/_includes/footer.html
@@ -1,8 +1,8 @@
 <footer class="bg-transparent print:hidden border-t">
-  <div class="container mx-auto px-4 py-6">
-    <div class="flex flex-col lg:flex-row items-center justify-between gap-3 lg:gap-0 text-center">
+  <div class="container mx-auto px-4 py-8">
+    <div class="flex flex-col lg:flex-row items-center justify-between gap-4 lg:gap-6 text-center">
       <div class="w-full lg:w-auto">
-        <ul class="flex flex-wrap items-center gap-x-4 mb-0">
+        <ul class="flex flex-wrap items-center gap-x-4 gap-y-2">
           <li class="flex items-center">
             Last updated on {{ site.time | date: '%d/%m/%Y' }}
           </li>
@@ -21,7 +21,7 @@
         </ul>
       </div>
       <div class="w-full lg:w-auto lg:ml-auto">
-        <ul class="flex flex-wrap items-center gap-x-4 mb-0">
+        <ul class="flex flex-wrap items-center gap-x-4 gap-y-2">
           <li class="flex items-center">
             Host a community on
             <a href="https://www.meetabit.com/communities/new" class="ml-1 transition-colors duration-200 hover:text-primary">Meetabit</a>
