--- a/site/assets/css/tailwind.css
+++ b/site/assets/css/tailwind.css
@@ -558,24 +558,6 @@ video {
     max-width: 1536px;
   }
 }
-nav[data-state="true"] .lucide-menu {
-  --tw-rotate: 180deg;
-  --tw-scale-x: 0;
-  --tw-scale-y: 0;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  opacity: 0;
-}
-nav[data-state="true"] .lucide-x {
-  position: relative;
-  --tw-rotate: 0deg;
-  --tw-scale-x: 1;
-  --tw-scale-y: 1;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  opacity: 1;
-}
-nav[data-state="true"] .mobile-menu {
-  display: block;
-}
 .badge-outline {
     border: 1px solid var(--color-border);
     background-color: transparent;
@@ -617,14 +599,8 @@ nav[data-state="true"] .mobile-menu {
 .fixed {
   position: fixed;
 }
-.absolute {
-  position: absolute;
-}
 .relative {
   position: relative;
-}
-.inset-0 {
-  inset: 0px;
 }
 .left-0 {
   left: 0px;
@@ -641,9 +617,6 @@ nav[data-state="true"] .mobile-menu {
 .col-auto {
   grid-column: auto;
 }
-.m-auto {
-  margin: auto;
-}
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -659,9 +632,6 @@ nav[data-state="true"] .mobile-menu {
 }
 .mb-3 {
   margin-bottom: 0.75rem;
-}
-.mb-6 {
-  margin-bottom: 1.5rem;
 }
 .mb-8 {
   margin-bottom: 2rem;
@@ -693,9 +663,6 @@ nav[data-state="true"] .mobile-menu {
 .list-item {
   display: list-item;
 }
-.hidden {
-  display: none;
-}
 .size-16 {
   width: 4rem;
   height: 4rem;
@@ -725,9 +692,6 @@ nav[data-state="true"] .mobile-menu {
 .min-w-0 {
   min-width: 0px;
 }
-.max-w-5xl {
-  max-width: 64rem;
-}
 .max-w-sm {
   max-width: 24rem;
 }
@@ -739,15 +703,6 @@ nav[data-state="true"] .mobile-menu {
 }
 .shrink-0 {
   flex-shrink: 0;
-}
-.-rotate-180 {
-  --tw-rotate: -180deg;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-.scale-0 {
-  --tw-scale-x: 0;
-  --tw-scale-y: 0;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .flex-row {
   flex-direction: row;
@@ -772,9 +727,6 @@ nav[data-state="true"] .mobile-menu {
 }
 .justify-between {
   justify-content: space-between;
-}
-.gap-1 {
-  gap: 0.25rem;
 }
 .gap-1\.5 {
   gap: 0.375rem;
@@ -816,9 +768,6 @@ nav[data-state="true"] .mobile-menu {
 .text-nowrap {
   text-wrap: nowrap;
 }
-.rounded-full {
-  border-radius: 9999px;
-}
 .rounded-lg {
   border-radius: 8px;
 }
@@ -828,15 +777,8 @@ nav[data-state="true"] .mobile-menu {
 .border-b {
   border-bottom-width: 1px;
 }
-.border-t {
-  border-top-width: 1px;
-}
-.bg-purple-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(147 51 234 / var(--tw-bg-opacity, 1));
-}
-.bg-transparent {
-  background-color: transparent;
+.bg-muted {
+  background-color: var(--color-muted);
 }
 .bg-white {
   --tw-bg-opacity: 1;
@@ -845,9 +787,6 @@ nav[data-state="true"] .mobile-menu {
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
-}
-.p-2 {
-  padding: 0.5rem;
 }
 .p-6 {
   padding: 1.5rem;
@@ -860,29 +799,20 @@ nav[data-state="true"] .mobile-menu {
   padding-left: 1rem;
   padding-right: 1rem;
 }
-.px-6 {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
-}
 .py-1 {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
 }
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
+.py-12 {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
 }
 .py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
 }
-.py-6 {
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
-}
-.py-8 {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
+.pb-32 {
+  padding-bottom: 8rem;
 }
 .pb-6 {
   padding-bottom: 1.5rem;
@@ -949,10 +879,6 @@ nav[data-state="true"] .mobile-menu {
 .text-foreground {
   color: var(--color-foreground);
 }
-.text-gray-700 {
-  --tw-text-opacity: 1;
-  color: rgb(55 65 81 / var(--tw-text-opacity, 1));
-}
 .text-muted {
   color: var(--color-muted);
 }
@@ -964,13 +890,6 @@ nav[data-state="true"] .mobile-menu {
 }
 .text-secondary {
   color: var(--color-secondary);
-}
-.text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
-}
-.opacity-0 {
-  opacity: 0;
 }
 .opacity-50 {
   opacity: 0.5;
@@ -998,26 +917,17 @@ nav[data-state="true"] .mobile-menu {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
+.duration-150 {
+  transition-duration: 150ms;
+}
 .duration-200 {
   transition-duration: 200ms;
 }
 .duration-300 {
   transition-duration: 300ms;
 }
-.hover\:bg-gray-100:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(243 244 246 / var(--tw-bg-opacity, 1));
-}
-.hover\:bg-purple-700:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(126 34 206 / var(--tw-bg-opacity, 1));
-}
 .hover\:text-primary:hover {
   color: var(--color-primary);
-}
-.hover\:text-purple-600:hover {
-  --tw-text-opacity: 1;
-  color: rgb(147 51 234 / var(--tw-text-opacity, 1));
 }
 .hover\:underline:hover {
   text-decoration-line: underline;
@@ -1056,18 +966,6 @@ nav[data-state="true"] .mobile-menu {
 
   .lg\:ml-auto {
     margin-left: auto;
-  }
-
-  .lg\:block {
-    display: block;
-  }
-
-  .lg\:inline-flex {
-    display: inline-flex;
-  }
-
-  .lg\:hidden {
-    display: none;
   }
 
   .lg\:w-auto {
